Got cmake stuff working.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,13 +1,20 @@
-# This project is designed to be built outside the Insight source tree.
-PROJECT(ProcessingExample)
+cmake_minimum_required(VERSION 2.6)
 
 # Find ITK.
-FIND_PACKAGE(ITK)
-IF(ITK_FOUND)
-  INCLUDE(${ITK_USE_FILE})
-ELSE(ITK_FOUND)
-  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
-ENDIF(ITK_FOUND)
+#FIND_PACKAGE(ITK)
+#IF(ITK_FOUND)
+#  INCLUDE(${ITK_USE_FILE})
+#ELSE(ITK_FOUND)
+#  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
+#ENDIF(ITK_FOUND)
 
-ADD_EXECUTABLE(bold bold.cpp particle.cpp)
-TARGET_LINK_LIBRARIES(bold ITKCommon)
+include_directories(${brainid_SOURCE_DIR}/code/include)
+link_directories(${brainid_SOURCE_DIR}/code)
+
+if(COMMAND cmake_policy)
+    cmake_policy(SET CMP0003 NEW)
+endif(COMMAND cmake_policy)
+
+
+ADD_EXECUTABLE(bold_test bold_test.cpp)
+TARGET_LINK_LIBRARIES(bold_test bold particle ITKCommon)
