--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -18,4 +18,4 @@ endif(COMMAND cmake_policy)
 
 ADD_EXECUTABLE(bold_test bold_test.cpp)
 ADD_EXECUTABLE(particle_test particle_test.cpp)
-TARGET_LINK_LIBRARIES(bold_test bold particle ITKCommon)
+TARGET_LINK_LIBRARIES(bold_test bold ITKCommon)
