Switched completely away from the idea of having templates. This is obviously a significant change from the previous release, however I think it will decrease the burden on the USER of the particle filter. Now bold doesn't have to be a class that inherits a template base class or any other terrible syntax. It is function pointers, which everyone of course hates (everyone but me) and does have a void* or 2, but it is flexible and I don't think it will be error prone.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -12,3 +12,4 @@ INCLUDE_DIRECTORIES(${brainid_SOURCE_DIR}/code/include)
 LINK_DIRECTORIES(${brainid_SOURCE_DIR}/code)
 
 ADD_LIBRARY(bold bold.cpp)
+ADD_LIBRARY(particle particle.cpp)
