Added more utilities. Specifically, unbias and fmri reading.
This code may eventually all be integrated, for now it is 3 separate
binaries.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -13,3 +13,13 @@ LINK_DIRECTORIES(${brainid_SOURCE_DIR}/code)
 
 ADD_LIBRARY(bold bold.cpp)
 ADD_LIBRARY(particle particle.cpp)
+
+#TARGET_LINK_LIBRARIES(bold particle ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
+
+ADD_EXECUTABLE(unbias unbias.cpp)
+ADD_EXECUTABLE(brainid brainid.cpp)
+ADD_EXECUTABLE(sumfmri sumfmri.cpp)
+
+TARGET_LINK_LIBRARIES(sumfmri ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
+TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
+TARGET_LINK_LIBRARIES(brainid bold particle ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
