modified some stuff.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -19,12 +19,14 @@ endif(COMMAND cmake_policy)
 ADD_EXECUTABLE(bold_test bold_test.cpp)
 ADD_EXECUTABLE(particle_test particle_test.cpp)
 
-ADD_EXECUTABLE(sumfmri_test_alltogether sumfmri_testalltogether.cpp)
-ADD_EXECUTABLE(sumfmri_test_sections sumfmri_testsections.cpp)
-ADD_EXECUTABLE(sumfmri_test_times sumfmri_testtimes.cpp)
+ADD_EXECUTABLE(segment_alltogether segment_alltogether.cpp)
+ADD_EXECUTABLE(segment_sections segment_sections.cpp)
+ADD_EXECUTABLE(segment_times segment_times.cpp)
 
-
+TARGET_LINK_LIBRARIES(particle_test particle ITKCommon)
 TARGET_LINK_LIBRARIES(bold_test bold particle ITKCommon)
-TARGET_LINK_LIBRARIES(sumfmri_test_alltogether ITKCommon sumfmri)
-TARGET_LINK_LIBRARIES(sumfmri_test_sections ITKCommon sumfmri)
-TARGET_LINK_LIBRARIES(sumfmri_test_times ITKCommon sumfmri)
+
+TARGET_LINK_LIBRARIES(segment_alltogether ITKCommon segment ITKIO)
+TARGET_LINK_LIBRARIES(segment_sections ITKCommon segment ITKIO)
+TARGET_LINK_LIBRARIES(segment_times segment ITKAlgorithms ITKBasicFilters
+    ITKCommon ITKIO)
