started switching to dysii.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ ELSE(ITK_FOUND)
   MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
 ENDIF(ITK_FOUND)
 
-find_path(SMCTC_INCLUDE history.hh moveset.hh  particle.hh rng.hh smc-exception.hh smctc.hh)
-find_library(SMCTC_LIBRARY libsmctc.a)
+# Find dysii
+find_path(DYSII_INCLUDE indii/ml/filter/ParticleFilter.hpp)
+find_path(MPI_INCLUDE mpi.hpp)
 
 SUBDIRS(code)
 SUBDIRS(testing)
