Got the brainid code running, just not working. Still needs a lot of work, see TODO lines in brainid.cpp.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -23,4 +23,5 @@ ADD_EXECUTABLE(fmri_timeseries fmri_timeseries.cpp)
 
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
-TARGET_LINK_LIBRARIES(brainid bold particle ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
+TARGET_LINK_LIBRARIES(brainid bold particle ITKAlgorithms ITKBasicFilters
+    ITKCommon ITKIO mpi boost_mpi-mt dysii gsl lapack)
