fmri_timeseries now normalizes the timeseries (although it should in reality normalize all timeseries the same) Got basic particle filter working, although I need to switch to a regularized particle filter.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -19,6 +19,7 @@ ADD_LIBRARY(segment segment.cpp)
 
 ADD_EXECUTABLE(unbias unbias.cpp)
 ADD_EXECUTABLE(brainid brainid.cpp)
+#ADD_EXECUTABLE(brainid brainid.cpp StratifiedParticleResampler.cpp)
 ADD_EXECUTABLE(fmri_timeseries fmri_timeseries.cpp)
 
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
