--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -20,8 +20,11 @@ ADD_EXECUTABLE(unbias unbias.cpp)
 ADD_EXECUTABLE(brainid brainid.cpp)
 #ADD_EXECUTABLE(brainid brainid.cpp StratifiedParticleResampler.cpp)
 ADD_EXECUTABLE(fmri_timeseries fmri_timeseries.cpp)
+ADD_EXECUTABLE(boldgen boldgen.cpp)
 
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(brainid BoldModel ITKAlgorithms ITKBasicFilters
+    ITKCommon ITKIO mpi boost_mpi-mt gsl lapack dysii)
+TARGET_LINK_LIBRARIES(boldgen BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi boost_mpi-mt gsl lapack dysii)
