--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
+SET(CMAKE_VERBOSE_MAKEFILE 1)
 
 # Find ITK.
 #FIND_PACKAGE(ITK)
@@ -26,7 +27,7 @@ ADD_EXECUTABLE(boldgen boldgen.cpp)
 
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
-TARGET_LINK_LIBRARIES(brainid boost_serialization boost_mpi-mt BoldModel ITKAlgorithms ITKBasicFilters
+TARGET_LINK_LIBRARIES(brainid boost_serialization-gcc41-mt boost_mpi-mt BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gsl lapack dysii)
-TARGET_LINK_LIBRARIES(boldgen boost_serialization boost_mpi-mt BoldModel ITKAlgorithms ITKBasicFilters 
+TARGET_LINK_LIBRARIES(boldgen boost_serialization-gcc41-mt boost_mpi-mt BoldModel ITKAlgorithms ITKBasicFilters 
     ITKCommon ITKIO mpi gsl lapack dysii)
