Finally everything works.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -27,7 +27,7 @@ ADD_EXECUTABLE(boldgen boldgen.cpp)
 
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
-TARGET_LINK_LIBRARIES(brainid boost_serialization-gcc41-mt boost_mpi-mt BoldModel ITKAlgorithms ITKBasicFilters
+TARGET_LINK_LIBRARIES(brainid boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gsl lapack dysii)
-TARGET_LINK_LIBRARIES(boldgen boost_serialization-gcc41-mt boost_mpi-mt BoldModel ITKAlgorithms ITKBasicFilters 
+TARGET_LINK_LIBRARIES(boldgen boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters 
     ITKCommon ITKIO mpi gsl lapack dysii)
