--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
+SET(CMAKE_VERBOSE_MAKEFILE 1)
+
 
 # Find ITK.
 #FIND_PACKAGE(ITK)
@@ -8,8 +10,10 @@ cmake_minimum_required(VERSION 2.6)
 #  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
 #ENDIF(ITK_FOUND)
 
-include_directories(${brainid_SOURCE_DIR}/code/include ${DYSII_INCLUDE})
-link_directories(${brainid_SOURCE_DIR}/code)
+INCLUDE_DIRECTORIES(${brainid_SOURCE_DIR}/code/include ${BOOST_INCLUDE_DIRS}
+    ${dysii_INCLUDE_DIRS})
+LINK_DIRECTORIES(${brainid_SOURCE_DIR}/code ${BOOST_LIBRARY_DIRS} 
+    ${dysii_LIBRARY_DIRS})
 
 if(COMMAND cmake_policy)
     cmake_policy(SET CMP0003 NEW)
@@ -21,7 +25,7 @@ ADD_EXECUTABLE(segment_alltogether segment_alltogether.cpp)
 ADD_EXECUTABLE(segment_sections segment_sections.cpp)
 ADD_EXECUTABLE(segment_times segment_times.cpp)
 
-TARGET_LINK_LIBRARIES(particle_test mpi boost_mpi-mt ITKIO ITKCommon dysii gsl
+TARGET_LINK_LIBRARIES(particle_test mpi boost_mpi boost_serialization ITKIO ITKCommon dysii gsl
     lapack)
 
 TARGET_LINK_LIBRARIES(segment_alltogether ITKCommon segment ITKIO)
