More work and I think I am done with getbuildtest.py....again

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -10,9 +10,9 @@ SET(CMAKE_VERBOSE_MAKEFILE 1)
 #ENDIF(ITK_FOUND)
 
 INCLUDE_DIRECTORIES(${brainid_SOURCE_DIR}/code/include ${BOOST_INCLUDE_DIRS}
-    ${dysii_INCLUDE_DIRS} ${MPI_INCLUDE_DIRS})
+    ${dysii_INCLUDE_DIRS} ${MPI_INCLUDE_DIRS} ${GSL_INCLUDE_DIRS})
 LINK_DIRECTORIES(${brainid_SOURCE_DIR}/code ${BOOST_LIBRARY_DIRS} 
-    ${dysii_LIBRARY_DIRS} ${MPI_LIBRARY_DIRS})
+    ${dysii_LIBRARY_DIRS} ${MPI_LIBRARY_DIRS} ${GSL_LIBRARY_DIRS})
 
 ADD_LIBRARY(segment segment.cpp)
 ADD_LIBRARY(BoldModel BoldModel.cpp)
@@ -28,6 +28,6 @@ ADD_EXECUTABLE(boldgen boldgen.cpp)
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(brainid mpi boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
-    ITKCommon ITKIO mpi gsl lapack dysii)
+    ITKCommon ITKIO mpi gslcblas gsl lapack dysii)
 TARGET_LINK_LIBRARIES(boldgen mpi boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters 
-    ITKCommon ITKIO mpi gsl lapack dysii)
+    ITKCommon ITKIO mpi gslcblas gsl lapack dysii)
