--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -27,7 +27,7 @@ ADD_EXECUTABLE(boldgen boldgen.cpp)
 
 TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
-TARGET_LINK_LIBRARIES(brainid mpi boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
+TARGET_LINK_LIBRARIES(brainid mpi boost_program_options boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gslcblas gsl lapack dysii)
-TARGET_LINK_LIBRARIES(boldgen mpi boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters 
+TARGET_LINK_LIBRARIES(boldgen mpi boost_program_options boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters 
     ITKCommon ITKIO mpi gslcblas gsl lapack dysii)
