Added command line options to boldgen. added to todo list.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -29,5 +29,5 @@ TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters ITKC
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(brainid mpi boost_program_options boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gslcblas gsl lapack dysii)
-TARGET_LINK_LIBRARIES(boldgen mpi boost_program_options boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters 
-    ITKCommon ITKIO mpi gslcblas gsl lapack dysii)
+TARGET_LINK_LIBRARIES(boldgen boost_mpi boost_program_options boost_serialization BoldModel ITKAlgorithms ITKBasicFilters 
+    ITKCommon ITKIO gslcblas gsl lapack mpi dysii)
