--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,5 +35,4 @@ FIND_LIBRARY(MPI_LIBRARY_DIRS NAMES mpi PATH /usr/lib)
 find_path(GSL_INCLUDE_DIRS gsl/gsl_errno.h)
 FIND_LIBRARY(GSL_LIBRARY_DIRS NAMES gsl PATH /usr/lib) 
 
-SUBDIRS(code)
-SUBDIRS(testing)
+SUBDIRS(code/utils code testing)
