Too many changes to enumerate unfortunately. See diff.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,16 +1,16 @@
-cmake_minimum_required(VERSION 2.6)
-SET(CMAKE_VERBOSE_MAKEFILE 1)
+    cmake_minimum_required(VERSION 2.6)
+    SET(CMAKE_VERBOSE_MAKEFILE 1)
 
-# Find ITK.
-#FIND_PACKAGE(ITK)
-#IF(ITK_FOUND)
-#  INCLUDE(${ITK_USE_FILE})
-#ELSE(ITK_FOUND)
-#  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
-#ENDIF(ITK_FOUND)
+    # Find ITK.
+    #FIND_PACKAGE(ITK)
+    #IF(ITK_FOUND)
+    #  INCLUDE(${ITK_USE_FILE})
+    #ELSE(ITK_FOUND)
+    #  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
+    #ENDIF(ITK_FOUND)
 
-INCLUDE_DIRECTORIES(
-    ${brainid_SOURCE_DIR}/code/include 
+    INCLUDE_DIRECTORIES(
+        ${brainid_SOURCE_DIR}/code/include 
     ${BOOST_INCLUDE_DIRS}
     ${dysii_INCLUDE_DIRS} 
     ${MPI_INCLUDE_DIRS} 
@@ -34,13 +34,18 @@ ADD_LIBRARY(BoldModel BoldModel.cpp)
 ADD_EXECUTABLE(unbias unbias.cpp)
 ADD_EXECUTABLE(brainid brainid.cpp)
 ADD_EXECUTABLE(printtags printtags.cpp)
+ADD_EXECUTABLE(copyorigin copy.cpp)
 ADD_EXECUTABLE(fmri_timeseries fmri_timeseries.cpp)
 ADD_EXECUTABLE(boldgen boldgen.cpp)
 
-TARGET_LINK_LIBRARIES(fmri_timeseries segment ITKAlgorithms ITKBasicFilters
+TARGET_LINK_LIBRARIES(fmri_timeseries modNiftiImageIO segment 
+    ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO itkvnl itkvcl vullib)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
-TARGET_LINK_LIBRARIES(printtags modNiftiImageIO ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
+TARGET_LINK_LIBRARIES(printtags modNiftiImageIO ITKAlgorithms 
+    ITKBasicFilters ITKCommon ITKIO)
+TARGET_LINK_LIBRARIES(copyorigin modNiftiImageIO ITKAlgorithms 
+    ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(brainid gfortran blas modNiftiImageIO lapack mpi 
     boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gslcblas gsl dysii itkvnl itkvcl vullib)
