--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -28,7 +28,8 @@ ADD_EXECUTABLE(segment_times segment_times.cpp)
 TARGET_LINK_LIBRARIES(particle_test mpi boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gslcblas gsl gfortran blas lapack dysii)
 
-TARGET_LINK_LIBRARIES(segment_alltogether ITKCommon segment ITKIO)
-TARGET_LINK_LIBRARIES(segment_sections ITKCommon segment ITKIO)
+TARGET_LINK_LIBRARIES(segment_alltogether ITKCommon segment ITKIO
+    ITKAlgorithms)
+TARGET_LINK_LIBRARIES(segment_sections ITKCommon segment ITKIO ITKAlgorithms)
 TARGET_LINK_LIBRARIES(segment_times segment ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO)
