--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,32 +1,35 @@
-    cmake_minimum_required(VERSION 2.6)
-    SET(CMAKE_VERBOSE_MAKEFILE 1)
+cmake_minimum_required(VERSION 2.6)
+SET(CMAKE_VERBOSE_MAKEFILE 1)
 
-    # Find ITK.
-    #FIND_PACKAGE(ITK)
-    #IF(ITK_FOUND)
-    #  INCLUDE(${ITK_USE_FILE})
-    #ELSE(ITK_FOUND)
-    #  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
-    #ENDIF(ITK_FOUND)
+# Find ITK.
+#FIND_PACKAGE(ITK)
+#IF(ITK_FOUND)
+#  INCLUDE(${ITK_USE_FILE})
+#ELSE(ITK_FOUND)
+#  MESSAGE(FATAL_ERROR "Cannot build without ITK. Please set ITK_DIR.")
+#ENDIF(ITK_FOUND)
 
-    INCLUDE_DIRECTORIES(
-        ${brainid_SOURCE_DIR}/code/include 
-    ${BOOST_INCLUDE_DIRS}
-    ${dysii_INCLUDE_DIRS} 
-    ${MPI_INCLUDE_DIRS} 
-    ${GSL_INCLUDE_DIRS}
-    ${brainid_SOURCE_DIR}/code/utils
-    )
+INCLUDE_DIRECTORIES(
+${brainid_SOURCE_DIR}/code/include 
+${BOOST_INCLUDE_DIRS}
+${dysii_INCLUDE_DIRS} 
+${MPI_INCLUDE_DIRS} 
+${GSL_INCLUDE_DIRS}
+${brainid_SOURCE_DIR}/code/utils
+)
+
 LINK_DIRECTORIES(
     ${brainid_SOURCE_DIR}/code/utils/vul
     ${brainid_SOURCE_DIR}/code 
     ${BOOST_LIBRARY_DIRS} 
     ${dysii_LIBRARY_DIRS} 
     ${MPI_LIBRARY_DIRS} 
-    ${GSL_LIBRARY_DIRS})
+    ${GSL_LIBRARY_DIRS}
+)
 
 ADD_LIBRARY(modNiftiImageIO modNiftiImageIO.cxx)
 ADD_LIBRARY(segment segment.cpp)
+ADD_LIBRARY(activate activate.cpp)
 ADD_LIBRARY(BoldModel BoldModel.cpp)
 
 #TARGET_LINK_LIBRARIES(bold particle ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
