--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -45,12 +45,12 @@ ADD_EXECUTABLE(boldgen boldgen.cpp)
 ADD_EXECUTABLE(concatinate concat.cpp)
 ADD_EXECUTABLE(prune prune.cpp)
 ADD_EXECUTABLE(readdicom readdicom.cpp)
-ADD_EXECUTABLE(makespline makespline.cpp)
+#ADD_EXECUTABLE(makespline makespline.cpp)
 ADD_EXECUTABLE(applymask applymask.cpp)
 ADD_EXECUTABLE(fft fft.cpp)
 ADD_EXECUTABLE(makesine makesine.cpp)
-ADD_EXECUTABLE(actmap activate_map.cpp)
-ADD_EXECUTABLE(mean_filter mean_filter.cpp)
+#ADD_EXECUTABLE(actmap activate_map.cpp)
+#ADD_EXECUTABLE(mean_filter mean_filter.cpp)
 ADD_EXECUTABLE(make_param_image make_param_image.cpp)
 
 TARGET_LINK_LIBRARIES(prune modNiftiImageIO 
@@ -62,7 +62,7 @@ TARGET_LINK_LIBRARIES(concatinate modNiftiImageIO
 TARGET_LINK_LIBRARIES(fmri_timeseries modNiftiImageIO segment 
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
-TARGET_LINK_LIBRARIES(segment gsl gslcblas)
+TARGET_LINK_LIBRARIES(segment gsl gslcblas tools)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(printtags modNiftiImageIO ITKAlgorithms 
     ITKBasicFilters ITKCommon ITKIO)
@@ -71,7 +71,7 @@ TARGET_LINK_LIBRARIES(copyorigin modNiftiImageIO ITKAlgorithms
 TARGET_LINK_LIBRARIES(brainid tools gfortran modNiftiImageIO blas lapack mpi 
     boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gsl gslcblas dysii itkvnl itkvcl vullib)
-TARGET_LINK_LIBRARIES(calc_parammap tools gfortran modNiftiImageIO blas lapack mpi 
+TARGET_LINK_LIBRARIES(calc_parammap segment tools gfortran modNiftiImageIO blas lapack mpi 
     boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO mpi gsl gslcblas dysii itkvnl itkvcl vullib segment)
 TARGET_LINK_LIBRARIES(boldgen tools gfortran blas lapack modNiftiImageIO boost_mpi 
@@ -87,19 +87,19 @@ TARGET_LINK_LIBRARIES(makesine modNiftiImageIO
 TARGET_LINK_LIBRARIES(readdicom modNiftiImageIO segment 
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
-TARGET_LINK_LIBRARIES(makespline modNiftiImageIO segment 
-    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
-    itkvcl vullib)
+#TARGET_LINK_LIBRARIES(makespline modNiftiImageIO segment 
+#    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
+#    itkvcl vullib)
 TARGET_LINK_LIBRARIES(applymask modNiftiImageIO segment 
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
-TARGET_LINK_LIBRARIES(actmap modNiftiImageIO segment tools
-    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
-    itkvcl vullib)
+#TARGET_LINK_LIBRARIES(actmap modNiftiImageIO segment tools
+#    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
+#    itkvcl vullib)
 TARGET_LINK_LIBRARIES(make_param_image modNiftiImageIO segment tools
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
 
-TARGET_LINK_LIBRARIES(mean_filter modNiftiImageIO segment 
-    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
-    itkvcl vullib)
+#TARGET_LINK_LIBRARIES(mean_filter modNiftiImageIO segment 
+#    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
+#    itkvcl vullib)
