--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -29,7 +29,6 @@ LINK_DIRECTORIES(
 
 ADD_LIBRARY(modNiftiImageIO modNiftiImageIO.cxx)
 ADD_LIBRARY(segment segment.cpp)
-ADD_LIBRARY(activate activate.cpp)
 ADD_LIBRARY(BoldModel BoldModel.cpp)
 ADD_LIBRARY(tools tools.cc)
 
@@ -39,18 +38,14 @@ ADD_EXECUTABLE(unbias unbias.cpp)
 ADD_EXECUTABLE(brainid brainid.cpp)
 ADD_EXECUTABLE(calc_parammap calc_parammap.cpp)
 ADD_EXECUTABLE(printtags printtags.cpp)
-ADD_EXECUTABLE(copyorigin copy.cpp)
+ADD_EXECUTABLE(setorientation setorientation.cpp)
 ADD_EXECUTABLE(fmri_timeseries fmri_timeseries.cpp)
 ADD_EXECUTABLE(boldgen boldgen.cpp)
 ADD_EXECUTABLE(concatinate concat.cpp)
 ADD_EXECUTABLE(prune prune.cpp)
 ADD_EXECUTABLE(readdicom readdicom.cpp)
-#ADD_EXECUTABLE(makespline makespline.cpp)
 ADD_EXECUTABLE(applymask applymask.cpp)
 ADD_EXECUTABLE(fft fft.cpp)
-ADD_EXECUTABLE(makesine makesine.cpp)
-#ADD_EXECUTABLE(actmap activate_map.cpp)
-#ADD_EXECUTABLE(mean_filter mean_filter.cpp)
 ADD_EXECUTABLE(make_param_image make_param_image.cpp)
 ADD_EXECUTABLE(parammap_eval parammap_eval.cpp)
 
@@ -67,7 +62,7 @@ TARGET_LINK_LIBRARIES(segment gsl gslcblas tools)
 TARGET_LINK_LIBRARIES(unbias ITKAlgorithms ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(printtags modNiftiImageIO ITKAlgorithms 
     ITKBasicFilters ITKCommon ITKIO)
-TARGET_LINK_LIBRARIES(copyorigin modNiftiImageIO ITKAlgorithms 
+TARGET_LINK_LIBRARIES(setorientation modNiftiImageIO ITKAlgorithms 
     ITKBasicFilters ITKCommon ITKIO)
 TARGET_LINK_LIBRARIES(brainid tools gfortran modNiftiImageIO blas lapack mpi 
     boost_serialization boost_mpi BoldModel ITKAlgorithms ITKBasicFilters
@@ -82,26 +77,13 @@ TARGET_LINK_LIBRARIES(boldgen tools gfortran blas lapack modNiftiImageIO boost_m
 TARGET_LINK_LIBRARIES(fft tools gfortran blas lapack modNiftiImageIO 
     ITKAlgorithms ITKBasicFilters 
     ITKCommon ITKIO gsl gslcblas itkvnl itkvcl vullib)
-TARGET_LINK_LIBRARIES(makesine modNiftiImageIO 
-    ITKAlgorithms ITKBasicFilters 
-    ITKCommon ITKIO itkvnl itkvcl vullib)
 
 TARGET_LINK_LIBRARIES(readdicom modNiftiImageIO segment 
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
-#TARGET_LINK_LIBRARIES(makespline modNiftiImageIO segment 
-#    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
-#    itkvcl vullib)
 TARGET_LINK_LIBRARIES(applymask modNiftiImageIO segment 
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
-#TARGET_LINK_LIBRARIES(actmap modNiftiImageIO segment tools
-#    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
-#    itkvcl vullib)
 TARGET_LINK_LIBRARIES(make_param_image modNiftiImageIO segment tools
     ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
     itkvcl vullib)
-
-#TARGET_LINK_LIBRARIES(mean_filter modNiftiImageIO segment 
-#    ITKAlgorithms ITKBasicFilters ITKCommon ITKIO itkvnl 
-#    itkvcl vullib)
