Code Cleanup, bugfixes, some new functionality
Added
different spline method, blind or informed
changed the "drift" term to a DC term when not using delta

Bugfix:
fixed problem with initializing default mu and variance

Cleanup:
Removed a lot of functions form segment.cc that were deprecated.
Removed the process option because it would not have functioned properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
-#SET(CMAKE_VERBOSE_MAKEFILE 0)
+#SET(CMAKE_VERBOSE_MAKEFILE 1)
 
 PROJECT(brainid)
 
@@ -46,6 +46,9 @@ else(EXISTS ${brainid_SOURCE_DIR}/.git)
     string(REGEX MATCH "[0-9]+" VERSION ${VERSION2})
 endif(EXISTS ${brainid_SOURCE_DIR}/.git)
 
-add_definitions(-DBRAINID_VERSION="${VERSION}")
+execute_process(COMMAND date +D%m_%d_%y_T%H_%M OUTPUT_VARIABLE TODAY)
+string(REGEX MATCH "[0-9A-Za-z_]*" TODAY ${TODAY})
+
+add_definitions(-DBRAINID_VERSION="${VERSION}_${TODAY}")
 
 SUBDIRS(code/utils code testing)
